# ai-config-validator

./: .gitignore  README.md  main.py  pyproject.toml
app/config_files/: iosxe-rtr01-full.txt  iosxe-rtr02-full.txt
app/langchain_tools/: bgp_tools.py  interface_tools.py
app/models/: bgp.py  device.py  interface.py
app/nl/: assistant.py
app/parsers/: cisco_ios.py  cisco_ios_myversion.py  configuration_test.txt
app/services/: validation.py
