[project]
name = "ai-config-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "ciscoconfparse>=1.9.52",
    "isort>=8.0.1",
    "langchain>=1.2.16",
    "langchain-openai>=1.2.1",
    "langsmith>=0.7.38",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "textfsm>=2.1.0",
]
